# pypure

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  tests.yml
docs/: index.md  installation.md
docs/reference/: pypure.core.md  pypure.md
requirements/: common.txt  dev.txt  docs.txt
src/pypure/: __init__.py
src/pypure/core/: __init__.py  pure.ini
tests/: __init__.py  test_core.py
