[metadata]
name = pypure
version = 0.1.0
author = ZytroCode
license = MIT

description = A powerful game engine in python.
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Topic :: Multimedia
    Topic :: Games/Entertainment

[options]
zip_safe = no
include_package_data = True
python_requires = >=3.6

package_dir =
    =src
packages = find:

[options.packages.find]
where=src

[flake8]
ignore = E226, F401, F403, F405, F841
max-line-length = 127
